# mad-ai-hackathon

./: .gitignore  .gitmodules  CLAUDE.md  README.md  agent.py  autoqa.db  autoqa.py  dev.sh  file-tree.md  generate_report.py  pyproject.toml  run_backend.py
autoqa/: __init__.py  cli.py  core.py  models.py  report.py  test_plan.json  test_result_TC001.json  test_result_TC002.json  test_result_TC003.json  test_result_TC004.json  test_result_TC005.json  test_result_TC006.json
autoqa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/: auth.py  autoqa_service.py  crud.py  database.py  main.py
data/: test_result_1.json  test_result_1.md  test_result_20250426_163602.html  test_result_20250426_163602.json  test_result_20250426_163602.md  test_result_20250426_175023.html  test_result_20250426_175023.json  test_result_20250426_175023.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/src/: middleware.ts
frontend/src/app/: global-error.tsx  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/src/app/auth/error/: page.tsx
frontend/src/app/auth/signin/: page.tsx
frontend/src/app/auth/success/: page.tsx
frontend/src/app/history/: error.tsx  loading.tsx  page.tsx
frontend/src/components/auth/: AuthProvider.tsx
frontend/src/components/forms/: TestForm.tsx
frontend/src/components/layout/: MainLayout.tsx  Navbar.tsx
frontend/src/components/tests/: TerminalOutput.tsx  TestCaseDetail.tsx  TestCaseList.tsx  TestRunCard.tsx  TestStatus.tsx
frontend/src/components/ui/: Alert.tsx  Badge.tsx  Card.tsx  ErrorDisplay.tsx  Loading.tsx
frontend/src/lib/: api.ts  auth.ts  hooks.ts
(+3 files in other folders)
